# myq2-rust

./: .gitignore  CLAUDE.md  COMMANDS.md  CVARS.md  Cargo.toml  README.md  quake2.sln
crates/myq2-client/: Cargo.toml
crates/myq2-client/src/: cl_browser.rs  cl_chat.rs  cl_cin.rs  cl_crosshair.rs  cl_demo.rs  cl_ents.rs  cl_fx.rs  cl_http.rs  cl_hud.rs  cl_input.rs  cl_inv.rs  cl_loc.rs  cl_main.rs  cl_newfx.rs  cl_parse.rs  cl_part.rs  cl_pred.rs  cl_scrn.rs  cl_smooth.rs  cl_tent.rs  cl_timing.rs  cl_view.rs  client.rs  console.rs  console_types.rs  keys.rs  lib.rs  menu.rs  platform.rs  qmenu.rs  ref_def.rs  snd_dma.rs  snd_mem.rs  sound_types.rs
crates/myq2-renderer/: Cargo.toml  build.rs
crates/myq2-renderer/shaders/: alias.frag.glsl  alias.vert.glsl  alias_cel.frag.glsl  alias_cel.vert.glsl  bloom_blur.frag.glsl  bloom_composite.frag.glsl  bloom_extract.frag.glsl  dlight.frag.glsl  dlight.vert.glsl  fsr2_temporal.frag.glsl  fsr_easu.frag.glsl  fsr_rcas.frag.glsl  fxaa.frag.glsl  motion_vectors.frag.glsl  motion_vectors.vert.glsl  particle.frag.glsl  particle.vert.glsl  postprocess.frag.glsl  postprocess.vert.glsl  sky.frag.glsl  sky.vert.glsl  ssao.frag.glsl  ssao_blur.frag.glsl  ui.frag.glsl  ui.vert.glsl  water.frag.glsl  water.vert.glsl  world.frag.glsl  world.vert.glsl
crates/myq2-renderer/shaders/rt/: denoise.comp.glsl  reflection.rchit.glsl  reflection.rmiss.glsl  reflection_ray.rgen.glsl  shadow.rahit.glsl  shadow.rmiss.glsl  shadow_ray.rgen.glsl  water.rchit.glsl
crates/myq2-renderer/src/: anorms.inc  anormtab.inc  lib.rs  platform.rs  qvk.rs  vk_bindings.rs  vk_draw.rs  vk_image.rs  vk_light.rs  vk_local.rs  vk_model.rs  vk_model_types.rs  vk_rmain.rs  vk_rmisc.rs  vk_rsurf.rs  vk_warp.rs
crates/myq2-renderer/src/modern/: gpu_device.rs  mod.rs  render_path.rs
crates/myq2-renderer/src/vulkan/: atomic_float.rs  barycentric.rs  bindless.rs  calibrated_timestamps.rs  color_grading.rs  color_write_enable.rs  commands.rs  context.rs  cooperative_matrix.rs  depth_bias_control.rs  depth_clip_control.rs  descriptor_buffer.rs  descriptors.rs  device_commands.rs  displacement_micromap.rs  dof.rs  dynamic_state3.rs  gpu_culling.rs  hdr.rs  host_image_copy.rs  image_compression.rs  low_latency.rs  maintenance.rs  memory.rs  memory_budget.rs  memory_priority.rs  mesh_shading.rs  mod.rs  motion_interpolation.rs  msaa_optimization.rs  nested_command_buffer.rs  opacity_micromap.rs  (+26 more)
crates/myq2-sys/: Cargo.toml  build.rs
crates/myq2-sys/src/: conproc.rs  glw_imp.rs  in_win.rs  lib.rs  main.rs  net_common.rs  net_io_thread.rs  net_tcp.rs  net_udp.rs  platform_register.rs  q_shwin.rs  qvk_win.rs  renderer_bridge.rs  snd_openal.rs  sys_win.rs  vid_dll.rs  vid_menu.rs
(+209 files in other folders)
