[package]
name = "myq2-client"
version = "1.0.0"
edition = "2021"

[dependencies]
myq2-common = { path = "../myq2-common" }
chrono = "0.4"
rand = "0.8"
reqwest = { version = "0.12", features = ["blocking", "stream", "rustls-tls"], default-features = false }
rayon = { workspace = true }
parking_lot = { workspace = true }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "fs", "time"] }
futures-util = "0.3"
